# game_overlay_sdk

./: .gitignore  CMakeLists.txt  COPYING  LICENSE.md  README.md  appveyor.yml  cmake_build.cmd  cmake_build32.cmd
DLLToInject/: DLLToInject.sln
DLLToInject/Commons/: CMakeLists.txt  Commons.vcxproj  Commons.vcxproj.filters
DLLToInject/Commons/Config/: Config.cpp  Config.h
DLLToInject/Commons/Logging/: MessageLog.cpp  MessageLog.h
DLLToInject/Commons/Overlay/: DLLInjection.cpp  GlobalHook.cpp  GlobalHook.h  Hook.cpp  Overlay.cpp  Overlay.h  OverlayInterface.cpp  OverlayInterface.h
DLLToInject/Commons/Recording/: Capturing.cpp  Capturing.h  OverlayThread.cpp  OverlayThread.h  PerformanceCounter.cpp  PerformanceCounter.hpp  RecordingState.cpp  RecordingState.h
DLLToInject/Commons/Rendering/: OverlayBitmap.cpp  OverlayBitmap.h
DLLToInject/Commons/Utility/: DirectoryType.h  FileDirectory.cpp  FileUtils.cpp  IniParser.cpp  IniParser.h  ProcessTermination.cpp  ProcessTermination.h  SmartHandle.h  StringUtils.cpp
DLLToInject/GameOverlay/d3d/: CMakeLists.txt  OverlayPS_Byte.h  OverlayVS_Byte.h  gameoverlay.vcxproj
DLLToInject/GameOverlay/d3d/res/: resource.rc
DLLToInject/GameOverlay/d3d/source/: hook.cpp  hook.hpp  hook_manager.cpp  hook_manager.hpp  main.cpp
DLLToInject/GameOverlay/d3d/source/d3d/: DXGIWrapper.h  d3d11_renderer.cpp  d3d11_renderer.hpp  dxgi_swapchain.cpp  dxgi_swapchain.hpp  steamvr.h
DLLToInject/GameOverlay/vulkan/: CMakeLists.txt  VK_LAYER_OCAT_overlay.rc  VK_LAYER_OCAT_overlay.vcxproj
DLLToInject/GameOverlay/vulkan/src/: OverlayImageData.cpp  OverlayImageData.h  Rendering.h  SwapchainMapping.cpp  SwapchainQueueMapping.h  VK_LAYER_OCAT_overlay.cpp  comp.spv
DLLToInject/GameOverlay/vulkan/src/Compositor/: vk_oculus.cpp  vk_steamvr.cpp  vk_steamvr.h
build32/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  Commons.vcxproj  Commons.vcxproj.filters  DLLInjection32.vcxproj  DLLInjection32.vcxproj.filters  GameOverlay32.vcxproj  GameOverlay32.vcxproj.filters  MinHook.vcxproj  MinHook.vcxproj.filters  VK_LAYER_OCAT_overlay32.vcxproj  VK_LAYER_OCAT_overlay32.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  game_overlay_sdk.sln
lib/32/: Commons.lib  DLLInjection32.exp  DLLInjection32.lib  GameOverlay32.exp  GameOverlay32.lib  MinHook.lib  VK_LAYER_OCAT_overlay32.exp  VK_LAYER_OCAT_overlay32.lib
lib/64/: Commons.lib  DLLInjection64.exp  DLLInjection64.lib  GameOverlay64.exp  GameOverlay64.lib  MinHook.lib  VK_LAYER_OCAT_overlay64.exp  VK_LAYER_OCAT_overlay64.lib
python/: README.md  setup.py
python/examples/: create.py  monitor.py  overlay_log_handler.py
python/game_overlay_sdk/: injector.py
python/game_overlay_sdk.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
python/game_overlay_sdk/lib/: shader.comp
src/DLLInjection/: DLLInjection.cpp  Monitor.cpp  MonitorProcessCreation.cpp
src/DLLInjection/inc/: DLLInjection.h  EventSink.h  Monitor.h  MonitorProcessCreation.h
src/DLLToInject/Commons/Overlay/: Hook.cpp  Hook.h  OverlayMessage.cpp  OverlayMessage.h  VK_Environment.cpp  VK_Environment.h
src/DLLToInject/Commons/Recording/: Capturing.cpp  Capturing.h  OverlayThread.cpp  OverlayThread.h  RecordingState.cpp  RecordingState.h
src/DLLToInject/Commons/Rendering/: ConstantBuffer.h  OverlayBitmap.cpp  OverlayBitmap.h  TextMessage.cpp  TextMessage.h
src/DLLToInject/Commons/Utility/: FileDirectory.cpp  FileDirectory.h  ProcessHelper.cpp  SmartHandle.cpp
src/DLLToInject/GameOverlay/d3d/: OverlayPS_Byte.h  OverlayVS_Byte.h
src/DLLToInject/GameOverlay/d3d/source/: critical_section.hpp  hook.cpp  hook.hpp  hook_manager.cpp  hook_manager.hpp  main.cpp
src/DLLToInject/GameOverlay/d3d/source/d3d/: DXGIWrapper.cpp  DXGIWrapper.h  d3d11_renderer.cpp  d3d11_renderer.hpp  d3d12_renderer.cpp  d3d12_renderer.hpp  dxgi.cpp  dxgi_swapchain.cpp  dxgi_swapchain.hpp  oculus.cpp  oculus.h  steamvr.cpp  steamvr.h
src/DLLToInject/GameOverlay/vulkan/src/: AppResMapping.cpp  AppResMapping.h  HashMap.h  OverlayImageData.cpp  OverlayImageData.h  Rendering.cpp  Rendering.h  SwapchainImageData.h  SwapchainImageMapping.h  SwapchainMapping.cpp  SwapchainMapping.h  SwapchainQueueMapping.h  VK_LAYER_OCAT_overlay.cpp  frag.spv  vert.spv
src/DLLToInject/GameOverlay/vulkan/src/Compositor/: vk_oculus.cpp  vk_oculus.h  vk_steamvr.cpp  vk_steamvr.h
src/DLLToInject/LibOVR/Include/: OVR_CAPI.h  OVR_CAPI_Audio.h  OVR_CAPI_D3D.h  OVR_CAPI_GL.h  OVR_CAPI_Keys.h  OVR_CAPI_Vk.h  OVR_ErrorCode.h  OVR_Version.h
src/DLLToInject/LibOVR/Include/Extras/: OVR_CAPI_Util.h  OVR_Math.h  OVR_StereoProjection.h
src/DLLToInject/MinHook/include/: MinHook.h
src/DLLToInject/MinHook/src/: buffer.c  buffer.h  hook.c  trampoline.c  trampoline.h
src/DLLToInject/MinHook/src/hde/: hde32.c  hde32.h  hde64.c  hde64.h  pstdint.h  table32.h  table64.h
src/DLLToInject/openvr/headers/: openvr.h  openvr_capi.h  openvr_driver.h
src/Utility/: Constants.h  FileDirectory.cpp  FileDirectory.h  FileUtils.cpp  FileUtils.h  MessageLog.cpp  MessageLog.h  ProcessHelper.cpp  ProcessHelper.h  ProcessTermination.cpp  ProcessTermination.h  StringUtils.cpp  StringUtils.h  SuspendThreads.cpp  SuspendThreads.h  Win32Handle.cpp  Win32Handle.h  arch.h
src/Utils/: ProcessHelpers.cpp  ProcessHelpers.h  StringUtils.cpp  StringUtils.h  Win32Handle.cpp  Win32Handle.h  suspend_threads.cpp  suspend_threads.h
